STYLE: Fix genre card alignment
Align genre cards to viewport centre.
(Setting card heights to be equal is still to be done)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -196,13 +196,13 @@ p.lead{
 
 /* STORY CARDS ---------------------------------------------- */
 
-.genre-card {
+.genre-card { /* individual genre card */
     background-color: var(--palette-pale);
     border-radius: 15px;
     opacity: 0.9;
 
     padding:  2px 10%;
-
+    
     /* padding: 5px;
     margin: 10% 2px; */
 
@@ -211,19 +211,20 @@ p.lead{
     margin-bottom: 2px;
     margin-left: 10px;
     margin-right: 10px;
+    /* min-width: 250px; */
+    
 }
 
-.col-genre-card {
+.col-genre-card { /* container for each genre card */
     margin-top: 10px;
     margin-bottom: 10px;
-    /* margin-left: 10px;
-    margin-right: 10px; */
+    max-width: 450px;
 }
 
-.genre-cards {
-    margin-left: 10px;
-    margin-right: 10px;
-    min-width: 300px;
+.genre-cards { /* container for all genre cards */
+    margin-top: 10px;
+    margin-bottom: 10px;
+    align-items: center;
 }
 
 .img-genre-card {
@@ -248,28 +249,6 @@ p.lead{
     body {
         /* background-color:blue; */
     }
-
-    .genre-card {
-        margin-top: 10px;
-        margin-bottom: 10px;
-        margin-left: 1%;
-        margin-right: 1%;
-        /* max-width: 240px; */
-    }
-
-    .col-genre-cards {
-        margin-top: 10px;
-        margin-bottom: 10px;
-    }
-
-    .genre-cards {
-        margin-left: 30px;
-        margin-right: 30px;
-    }
-
-    .img-genre-card {
-        /* max-width: 220px; */
-    }
     
     .btn-genre-card-select {
         font-size: 15px;
@@ -285,30 +264,9 @@ p.lead{
         /* background-color:lightskyblue; */
     }
     
-    .genre-card {
-        margin-left: 3%;
-        margin-right: 3%;
-        /* max-width: 300px; */
-    }
-
-    .genre-cards {
-        margin-left: 50px;
-        margin-right: 50px;
-    }
-
-    
-    .img-genre-card {
-        /* max-width: 85%; */
-    }
-
-    /* .card-body {
-        padding: 5px 15px;
-    } */
-
     .btn-genre-card-select {
         font-size: 16px;
         line-height: 32px; 
-        /* width: 300px; */
     }
 
 }
@@ -318,24 +276,6 @@ p.lead{
     body {
         /* background-color:aqua; */
     }
-
-    .col-genre-card {
-        margin-top: 10px;
-        margin-bottom: 10px;
-        /* margin-left: 2%;
-        margin-right: 2%; */
-        /* max-width: 300px; */ 
-    }
-    
-    .genre-cards {
-        margin-left: 80px;
-        margin-right: 80px;
-    }
-    
-    /* .card-body {
-        padding: 10px 18px;
-    } */
-
 
     .btn-genre-card-select {
         width: 75%;
@@ -349,10 +289,6 @@ p.lead{
         /* background-color:aquamarine; */
     }
 
-    .genre-cards {
-        margin-left: 100px;
-        margin-right: 100px;
-    }
 }
 
 /* XX-Large devices (larger desktops, 1400px and up) */
